# bug_algorithm

./: .gitignore  CMakeLists.txt  LICENSE  README.md
algorithms/: CMakeLists.txt
algorithms/include/: Bug.hpp
algorithms/src/: Bug.cpp  main.cpp
typekit/include/: Point2d.hpp  Pose2d.hpp
typekit/src/: Point2d.cpp  Pose2d.cpp
